force-app/main/default/objects/Timesheet__c/fields/Approval_datetime__c.field-meta.xml
<CustomField>
    <fullName>Approval_datetime__c</fullName>
    <label>Approval datetime</label>
    <type>DateTime</type>
</CustomField>