force-app/main/default/objects/Timesheet__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact responsible for approving timesheet</description>
    <inlineHelpText>Contact responsible for approving timesheet</inlineHelpText>
    <label>Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets (Approver)</relationshipLabel>
    <relationshipName>Approver_for_timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>