force-app/main/default/objects/Timesheet__c/fields/Moment_of_approval__c.field-meta.xml
<CustomField>
    <fullName>Moment_of_approval__c</fullName>
    <label>Moment of approval</label>
    <type>DateTime</type>
</CustomField>