force-app/main/default/objects/Timesheet__c/fields/Moment_of_refusal__c.field-meta.xml
<CustomField>
    <fullName>Moment_of_refusal__c</fullName>
    <label>Moment of refusal</label>
    <type>DateTime</type>
</CustomField>