force-app/main/default/objects/Timesheet__c/fields/Professional_user__c.field-meta.xml
<CustomField>
    <fullName>Professional_user__c</fullName>
    <formula>Professional__r.User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Professional user</label>
    <type>Text</type>
</CustomField>