force-app/main/default/objects/Timesheet__c/fields/Timesheet_approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_to_timesheet</relationshipName>
    <type>Lookup</type>
</CustomField>