force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_date__c</columns>
    <columns>End_date__c</columns>
    <columns>Approval_status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>