force-app/main/default/objects/Timesheet__c/listViews/Hiring_Manager_queue_Timesheet.listView-meta.xml
<ListView>
    <fullName>Hiring_Manager_queue_Timesheet</fullName>
    <filterScope>Queue</filterScope>
    <label>Hiring Manager queue</label>
    <queue>Hiring_Manager_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>