force-app/main/default/objects/Timesheet__c/listViews/Mijn_tijdkaarten.listView-meta.xml
<ListView>
    <fullName>Mijn_tijdkaarten</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Mijn tijdkaarten</label>
    <sharedTo>
        <portalRole>HeroInterimProfessionalsCustomerUser</portalRole>
    </sharedTo>
</ListView>